nov 13 - strat tests + gui stuff